# mypackage

./: .gitignore  README.md  mkdocs.yml  setup.py
docs/: index.md
mypackage/: __init__.py  core.py
mypackage/src/: CMakeLists.txt  common.h  sum.cpp
test/: test_core.py
